[package]
name = "redisgraph"
version = "0.3.0"
authors = ["Malte Voos <voos.malte@gmail.com>"]
keywords = ["redis", "database", "graph-database"]
description = "A Rust client for RedisGraph."
homepage = "https://github.com/malte-v/redisgraph-rs"
repository = "https://github.com/malte-v/redisgraph-rs"
documentation = "https://docs.rs/redisgraph"
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
redis = "0.15.1"
num = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2.11"

[dev-dependencies]
serial_test = "0.4.0"
maplit = "1.0.2"
